# nfs-ganesha

./: IMPLEMENTATION_NOTES.md  integration_test.sh  sample_ofs_ganesha.conf  test_ofs_config.sh  test_standalone
.github/: copilot-instructions.md
.github/workflows/: ci.yml
build_test/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake
src/: CMakeLists.txt  nfs-ganesha.spec-in.cmake
src/FSAL/: CMakeLists.txt  default_methods.c  fsal_helper.c  localfs.c
src/FSAL/FSAL_CEPH/: export.c  handle.c  internal.h  main.c
src/FSAL/FSAL_GPFS/: file.c  fsal_mds.c
src/FSAL/FSAL_OFS/: CMakeLists.txt  ofs_export.c  ofs_handle.c  ofs_int.h  ofs_main.c  ofs_up.c
src/FSAL/FSAL_SAUNAFS/: mds_handle.c
src/FSAL/OFS/: CMakeLists.txt  README.md  fsal_ofs_conf.c  fsal_ofs_export.c  fsal_ofs_handle.c  fsal_ofs_init.c  fsal_ofs_internal.h  fsal_ofs_ops.c  fsal_ofs_util.c
src/FSAL/Stackable_FSALs/FSAL_MDCACHE/: mdcache_up.c
src/MainNFSD/: CMakeLists.txt  libganesha_nfsd.ver  nfs_admin_thread.c  nfs_init.c  nfs_main.c  nfs_metrics.c  nfs_qos.c
src/Protocols/NFS/: nfs4_Compound.c  nfs4_op_destroy_session.c  nfs4_op_exchange_id.c  nfs4_op_layoutget.c  nfs4_op_lock.c  nfs4_op_read.c  nfs4_op_reclaim_complete.c  nfs4_op_setclientid.c  nfs4_op_write.c  nfs4_op_xattr.c  nfs_proto_tools.c
src/Protocols/NLM/: nlm_async.c
src/RPCAL/: connection_manager.c  nfs_dupreq.c  rpc_tools.c
src/SAL/: nfs4_clientid.c  nfs4_recovery.c  state_lock.c
src/SAL/recovery/: recovery_fs.c  recovery_fs_ng.c  recovery_rados_cluster.c  recovery_rados_kv.c  recovery_rados_ng.c
src/cidr/: cidr_compare.c  cidr_net.c  cidr_num.c
src/config_parsing/: CMakeLists.txt  analyse.h  conf_lex.l  test_parse.c
src/config_samples/: config.txt  prometheus.alerts.yml
src/doc/man/: CMakeLists.txt  ganesha-ceph-config.rst  ganesha-config.rst  ganesha-core-config.rst  ganesha-export-config.rst  ganesha-qos-config.rst  index.rst
src/hashtable/: hashtable.c
src/idmapper/: CMakeLists.txt  idmapper.c  idmapper_cache.c  idmapper_monitoring.c  idmapper_negative_cache.c  pwnam_wrappers.c  sss_nss_idmap.c
src/include/: client_mgr.h  config-h.in.cmake  connection_manager.h  export_mgr.h  fsal_api.h  gsh_config.h  hashtable.h  idmapper.h  idmapper_monitoring.h  log_common.h  nfs_dupreq.h  nfs_metrics.h  nfs_proto_data.h  nfs_qos.h  nfs_qosmgr.h  pwnam_wrappers.h  sal_data.h  sal_functions.h  sss_nss_idmap.h
src/include/misc/: portable.h
src/log/: log_functions.c
src/monitoring/: dynamic_metrics.cc  prometheus_exposer.cc
src/monitoring/include/: dynamic_metrics.h  prometheus_exposer.h
src/scripts/ganeshactl/: ganesha_mgr.py
src/scripts/ganeshactl/Ganesha/: ganesha_mgr_utils.py
src/scripts/gpfs-epoch/: gpfs-epoch.py
src/selinux/: ganesha.te
src/support/: client_mgr.c  exports.c  nfs_creds.c  nfs_qosmgr.c  nfs_read_conf.c  server_stats.c  uid2grp.c
src/test/: run_ofs_handle_test.sh  test_ofs_config.c  test_ofs_config_standalone  test_ofs_config_standalone.c  test_ofs_file_handle.c  test_ofs_handle_ops.c  test_ofs_utils_standalone  test_ofs_utils_standalone.c
test_build/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake
test_build/docker/: Dockerfile  entrypoint.sh
